[package]
name = "blockhop"
version = "0.1.0"
authors = ["Akourne Bursche <Crocodoctopus@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.1"
gl = "0.10.0"
glutin = "0.19.0"
crossbeam-channel = "0.3.8"
ezgl = { path = "../ezgl" }
nalgebra = "0.18.0"
nphysics2d = "0.11.1"
bincode = "1.1.2"
serde = "1.0.88"
serde_derive = "1.0.88"